RESOLVED FIXED266429
Black banners on webpage, sometimes content doesn't fully render when tab switching
https://bugs.webkit.org/show_bug.cgi?id=266429
Summary Black banners on webpage, sometimes content doesn't fully render when tab swi...
Matt Woodrow
Reported 2023-12-14 11:48:45 PST
<rdar://119668502> Particularly easy to reproduce on Marriott.com login/logout pages.
Attachments
Matt Woodrow
Comment 1 2023-12-14 11:52:06 PST
EWS
Comment 2 2023-12-14 13:50:55 PST
Committed 272069@main (9941ce56b7a1): <https://commits.webkit.org/272069@main> Reviewed commits have been landed. Closing PR #21817 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.